unpackaged/main/default/objects/Contact/fields/Affiliate_Partnerships__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Partnerships__c</fullName>
    <label>Affiliate Partnerships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affiliate_Partnerships</valueSetName>
    </valueSet>
</CustomField>