unpackaged/main/default/objects/Contact/fields/Alternate_Emails__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Emails__c</fullName>
    <label>Alternate Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>