unpackaged/main/default/objects/Contact/fields/Are_you_an_agent_team_or_brokerage__c.field-meta.xml
<CustomField>
    <fullName>Are_you_an_agent_team_or_brokerage__c</fullName>
    <label>Are you an agent, team, or brokerage?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Brokerage (under 20 agents)</fullName>
            </value>
            <value>
                <fullName>Brokerage (20+ agents)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>