unpackaged/main/default/objects/Contact/fields/Assigned_IM__c.field-meta.xml
<CustomField>
    <fullName>Assigned_IM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned IM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>