unpackaged/main/default/objects/Contact/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <label>Brokerage</label>
    <type>TextArea</type>
</CustomField>