unpackaged/main/default/objects/Contact/fields/Client_Persona__c.field-meta.xml
<CustomField>
    <fullName>Client_Persona__c</fullName>
    <label>Client Persona</label>
    <type>TextArea</type>
</CustomField>