unpackaged/main/default/objects/Contact/fields/Count_of_MLS_Boards__c.field-meta.xml
<CustomField>
    <fullName>Count_of_MLS_Boards__c</fullName>
    <label>(MLS) Count of MLS Boards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>