unpackaged/main/default/objects/Contact/fields/Date_Entered_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Customer__c</fullName>
    <label>Date Entered Customer</label>
    <type>Date</type>
</CustomField>