unpackaged/main/default/objects/Contact/fields/Date_Entered_Sales_Qualified_Lead__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered_Sales_Qualified_Lead__c</fullName>
    <label>Date Entered Sales Qualified Lead</label>
    <type>Date</type>
</CustomField>