unpackaged/main/default/objects/Contact/fields/Do_not_re_assign__c.field-meta.xml
<CustomField>
    <fullName>Do_not_re_assign__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Do not re-assign</label>
    <type>Checkbox</type>
</CustomField>