unpackaged/main/default/objects/Contact/fields/Do_not_reference__c.field-meta.xml
<CustomField>
    <fullName>Do_not_reference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not reference</label>
    <type>Checkbox</type>
</CustomField>