unpackaged/main/default/objects/Contact/fields/Former_Employee__c.field-meta.xml
<CustomField>
    <fullName>Former_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Northpass reporting</description>
    <label>Former Employee</label>
    <type>Checkbox</type>
</CustomField>