unpackaged/main/default/objects/Contact/fields/Gift_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Gift_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SF case # 00169734 - needed to track gift giving eligibility	Notates if a Client is eligible for a gift</description>
    <label>Gift Recipient</label>
    <type>Checkbox</type>
</CustomField>