unpackaged/main/default/objects/Contact/fields/Google_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Click_ID__c</fullName>
    <label>Google Click ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>