unpackaged/main/default/objects/Contact/fields/Hubspot_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Contact_ID__c</fullName>
    <label>Hubspot Contact ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>