unpackaged/main/default/objects/Contact/fields/Industry_Contact__c.field-meta.xml
<CustomField>
    <fullName>Industry_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Industry Contact</label>
    <type>Checkbox</type>
</CustomField>