unpackaged/main/default/objects/Contact/fields/Kubaru_first_assigned_date__c.field-meta.xml
<CustomField>
    <fullName>Kubaru_first_assigned_date__c</fullName>
    <label>Kubaru first assigned date</label>
    <type>Date</type>
</CustomField>