unpackaged/main/default/objects/Contact/fields/Last_12_months_transactions__c.field-meta.xml
<CustomField>
    <fullName>Last_12_months_transactions__c</fullName>
    <label>Last 12 months transactions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>