unpackaged/main/default/objects/Contact/fields/Last_Activity_Date_Days__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_Days__c</fullName>
    <formula>IF(ISBLANK(LastActivityDate), 0, TODAY() - LastActivityDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity Date Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>