unpackaged/main/default/objects/Contact/fields/Last_distributed_by_Kubaru_router_name__c.field-meta.xml
<CustomField>
    <fullName>Last_distributed_by_Kubaru_router_name__c</fullName>
    <label>Last distributed by Kubaru router name</label>
    <type>TextArea</type>
</CustomField>