unpackaged/main/default/objects/Contact/fields/Last_lost_opportunity_date__c.field-meta.xml
<CustomField>
    <fullName>Last_lost_opportunity_date__c</fullName>
    <label>Last lost opportunity date</label>
    <type>Date</type>
</CustomField>