unpackaged/main/default/objects/Contact/fields/Last_Referring_Site__c.field-meta.xml
<CustomField>
    <fullName>Last_Referring_Site__c</fullName>
    <label>Last Referring Site</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>