unpackaged/main/default/objects/Contact/fields/Last_Rep_Assigned_by_Kubaru__c.field-meta.xml
<CustomField>
    <fullName>Last_Rep_Assigned_by_Kubaru__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Rep Assigned by Kubaru</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>