unpackaged/main/default/objects/Contact/fields/Last_revision_assigned__c.field-meta.xml
<CustomField>
    <fullName>Last_revision_assigned__c</fullName>
    <label>Last revision assigned</label>
    <type>DateTime</type>
</CustomField>