unpackaged/main/default/objects/Contact/fields/Last_website_execution_assinged__c.field-meta.xml
<CustomField>
    <fullName>Last_website_execution_assinged__c</fullName>
    <label>Last website execution assinged</label>
    <type>DateTime</type>
</CustomField>