unpackaged/main/default/objects/Contact/fields/LEAD_ID_MERGE_LOG__c.field-meta.xml
<CustomField>
    <fullName>LEAD_ID_MERGE_LOG__c</fullName>
    <label>LEAD_ID_MERGE_LOG</label>
    <type>TextArea</type>
</CustomField>