unpackaged/main/default/objects/Contact/fields/Lead_Magnet_Campaign_download__c.field-meta.xml
<CustomField>
    <fullName>Lead_Magnet_Campaign_download__c</fullName>
    <label>Lead Magnet Campaign download</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>