unpackaged/main/default/objects/Contact/fields/Lead_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Type__c</fullName>
    <formula>IF(

OR(ISPICKVAL( LeadSource, &quot;Organic Inbound&quot;),ISPICKVAL( LeadSource, &quot;Client Referrals&quot;),ISPICKVAL( LeadSource, &quot;Partnership Events&quot;),ISPICKVAL( LeadSource, &quot;Industry Events&quot;),ISPICKVAL( LeadSource, &quot;Employee Referrals&quot;),ISPICKVAL( LeadSource, &quot;Build Your Presence Webinar&quot;),ISPICKVAL( LeadSource, &quot;Paid Inbound&quot;), ISPICKVAL( LeadSource, &quot;Partnership Inbound&quot;)), &quot;Inbound&quot;, &quot;Outbound&quot;


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source Type</label>
    <type>Text</type>
</CustomField>