unpackaged/main/default/objects/Contact/fields/Left_Organization__c.field-meta.xml
<CustomField>
    <fullName>Left_Organization__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The contact has left the account they&#39;re associated with</inlineHelpText>
    <label>Left Organization</label>
    <type>Checkbox</type>
</CustomField>