unpackaged/main/default/objects/Contact/fields/LP_Academy_Team__c.field-meta.xml
<CustomField>
    <fullName>LP_Academy_Team__c</fullName>
    <description>Used for Employee Record Types and the Northpass integration</description>
    <label>LP Academy Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CSD - Client Experience</fullName>
            </value>
            <value>
                <fullName>CSD - Content</fullName>
            </value>
            <value>
                <fullName>CSD - CSM</fullName>
            </value>
            <value>
                <fullName>CSD - DCSM</fullName>
            </value>
            <value>
                <fullName>CSD - Onboarding</fullName>
            </value>
            <value>
                <fullName>CSD - Paid Media</fullName>
            </value>
            <value>
                <fullName>CSD - PFT - IDX - Offshore</fullName>
            </value>
            <value>
                <fullName>CSD - PFT - IDX - Onshore</fullName>
            </value>
            <value>
                <fullName>CSD - PFT - Launch - Offshore</fullName>
            </value>
            <value>
                <fullName>CSD - PFT - Launch - Onshore</fullName>
            </value>
            <value>
                <fullName>CSD - PFT - PET - Offshore</fullName>
            </value>
            <value>
                <fullName>CSD - PFT - PET - Onshore</fullName>
            </value>
            <value>
                <fullName>CSD - SEO</fullName>
            </value>
            <value>
                <fullName>CSD - Social Media</fullName>
            </value>
            <value>
                <fullName>CSD - Support</fullName>
            </value>
            <value>
                <fullName>Sales - AE1 - Onboarding</fullName>
            </value>
            <value>
                <fullName>Sales - AE1s and AE2s</fullName>
            </value>
            <value>
                <fullName>Sales - Managers</fullName>
            </value>
            <value>
                <fullName>Sales - SDR</fullName>
            </value>
            <value>
                <fullName>Sales - SDR - Onboarding</fullName>
            </value>
            <value>
                <fullName>Sales - Strategic AE3 and BDR</fullName>
            </value>
            <value>
                <fullName>CSD - Social - Offshore</fullName>
            </value>
            <value>
                <fullName>CSD - Support - Offshore VAs</fullName>
            </value>
            <value>
                <fullName>CSD - Support - Onshore</fullName>
            </value>
            <value>
                <fullName>CSD - Social Media - Onshore</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>CSD - PFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>