unpackaged/main/default/objects/Contact/fields/Manager_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Manager_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Assigned</label>
    <type>Checkbox</type>
</CustomField>