unpackaged/main/default/objects/Contact/fields/Marketing_Category__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Category__c</fullName>
    <label>Marketing Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
                <isActive>false</isActive>
                <label>Events</label>
            </value>
            <value>
                <fullName>Inbound Partners</fullName>
                <isActive>false</isActive>
                <label>Inbound Partners</label>
            </value>
            <value>
                <fullName>Strategic Outbound</fullName>
                <isActive>false</isActive>
                <label>Strategic Outbound</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>