unpackaged/main/default/objects/Contact/fields/Marketing_Status__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Status__c</fullName>
    <label>Marketing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Disqualify</fullName>
            </value>
            <value>
                <fullName>Pursuing</fullName>
            </value>
            <value>
                <fullName>Engaging</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Nurture-Canceled</fullName>
            </value>
            <value>
                <fullName>Engaging Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>