unpackaged/main/default/objects/Contact/fields/MLS_Agent_master_key__c.field-meta.xml
<CustomField>
    <fullName>MLS_Agent_master_key__c</fullName>
    <label>MLS Agent master key</label>
    <length>150</length>
    <type>Text</type>
</CustomField>