unpackaged/main/default/objects/Contact/fields/MLS_AGENT_MASTER_KEY_MERGE_LOG__c.field-meta.xml
<CustomField>
    <fullName>MLS_AGENT_MASTER_KEY_MERGE_LOG__c</fullName>
    <label>MLS_AGENT_MASTER_KEY_MERGE_LOG</label>
    <type>TextArea</type>
</CustomField>