unpackaged/main/default/objects/Contact/fields/MLS_Board__c.field-meta.xml
<CustomField>
    <fullName>MLS_Board__c</fullName>
    <label>(MLS) MLS Board</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>