unpackaged/main/default/objects/Contact/fields/MlS_last_refresh__c.field-meta.xml
<CustomField>
    <fullName>MlS_last_refresh__c</fullName>
    <label>(MLS) MlS last refresh</label>
    <type>Date</type>
</CustomField>