unpackaged/main/default/objects/Contact/fields/MLS_Lead_Grading_Tier__c.field-meta.xml
<CustomField>
    <fullName>MLS_Lead_Grading_Tier__c</fullName>
    <formula>IF(
Prior_12_months_total_transaction_value__c &gt; 9999999, &quot;Tier 1&quot;,

IF(

AND(Prior_12_months_total_transaction_value__c &gt; 4999999 , Prior_12_months_total_transaction_value__c &lt; 10000000), &quot;Tier 2&quot;,

IF(

AND(Prior_12_months_total_transaction_value__c &gt; 2999999, Prior_12_months_total_transaction_value__c &lt; 5000000), &quot;Tier 3&quot;, &quot;Tier 4&quot;

)


)


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(MLS) Lead Grading Tier</label>
    <type>Text</type>
</CustomField>