unpackaged/main/default/objects/Contact/fields/MLS_Prior_12_m_total_transaction__c.field-meta.xml
<CustomField>
    <fullName>MLS_Prior_12_m_total_transaction__c</fullName>
    <label>(MLS) Prior 12 m total transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>