unpackaged/main/default/objects/Contact/fields/MLS_Prior_12_months_average_sold__c.field-meta.xml
<CustomField>
    <fullName>MLS_Prior_12_months_average_sold__c</fullName>
    <label>(MLS) Prior 12 months average sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>