unpackaged/main/default/objects/Contact/fields/MLS_Prior_1_months_sold_transaction__c.field-meta.xml
<CustomField>
    <fullName>MLS_Prior_1_months_sold_transaction__c</fullName>
    <label>(MLS) Prior 1 months sold transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>