unpackaged/main/default/objects/Contact/fields/Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Office_Name__c</fullName>
    <label>(MLS) Office Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>