unpackaged/main/default/objects/Contact/fields/Owned_by_a_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_a_Queue__c</fullName>
    <description>used by Hubspot for routing &amp; assignment</description>
    <formula>false

/*
Always false - contacts cannot be owned by a Queue
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>used by Hubspot for routing &amp; assignment</inlineHelpText>
    <label>Owned by a Queue</label>
    <type>Checkbox</type>
</CustomField>