unpackaged/main/default/objects/Contact/fields/Paid_Search_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Paid_Search_Inbound__c</fullName>
    <label>Paid Search Inbound</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>