unpackaged/main/default/objects/Contact/fields/Partner_Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Partner_Meeting_Outcome__c</fullName>
    <label>Partner Meeting Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client retention</fullName>
            </value>
            <value>
                <fullName>Presentation booked</fullName>
            </value>
            <value>
                <fullName>Lead generated</fullName>
            </value>
            <value>
                <fullName>Promotional opp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>