unpackaged/main/default/objects/Contact/fields/Partnership_Webinars_2023__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Webinars_2023__c</fullName>
    <label>Partnership Webinars 2023</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partnership_Webinars_2023</valueSetName>
    </valueSet>
</CustomField>