unpackaged/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Team leader</fullName>
            </value>
            <value>
                <fullName>Website Builder</fullName>
            </value>
            <value>
                <fullName>Data Specialist</fullName>
            </value>
            <value>
                <fullName>Header Image Curator</fullName>
            </value>
            <value>
                <fullName>Design project coordinator</fullName>
            </value>
            <value>
                <fullName>IDX Data Specialist</fullName>
            </value>
            <value>
                <fullName>Logo Editor</fullName>
            </value>
            <value>
                <fullName>Migration Crawl &amp; Mapping Specialist</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>SEO Specialist</fullName>
            </value>
            <value>
                <fullName>Support Specialist</fullName>
            </value>
            <value>
                <fullName>Marketing Specialist</fullName>
            </value>
            <value>
                <fullName>Ads Specialist</fullName>
            </value>
            <value>
                <fullName>Content Creator</fullName>
            </value>
            <value>
                <fullName>Design Project Associate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>