unpackaged/main/default/objects/Contact/fields/Preferred_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Cadence__c</fullName>
    <label>Preferred Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bi-monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>