unpackaged/main/default/objects/Contact/fields/Preferred_Contact_Methods__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Methods__c</fullName>
    <label>Preferred Contact Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Video Call</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>