unpackaged/main/default/objects/Contact/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <description>Indicates if the contact is the primary contact in an account.</description>
    <formula>IF(Account.Contact__c = Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>