unpackaged/main/default/objects/Contact/fields/Prior_12_months_average_buyer_price__c.field-meta.xml
<CustomField>
    <fullName>Prior_12_months_average_buyer_price__c</fullName>
    <label>MLS) Prior 12 months avg buyer price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>