unpackaged/main/default/objects/Contact/fields/Prior_12_months_total_listings__c.field-meta.xml
<CustomField>
    <fullName>Prior_12_months_total_listings__c</fullName>
    <formula>Prior_12_months_sold_listings__c +  Prior_12_months_buyer_listings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(MLS) Prior 12 months total listings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>