unpackaged/main/default/objects/Contact/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <label>ProjectName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>