unpackaged/main/default/objects/Contact/fields/Re_Engage_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Engage_Date__c</fullName>
    <label>Re-Engage Date</label>
    <type>Date</type>
</CustomField>