unpackaged/main/default/objects/Contact/fields/Rep_assigned_date__c.field-meta.xml
<CustomField>
    <fullName>Rep_assigned_date__c</fullName>
    <label>Rep assigned date</label>
    <type>DateTime</type>
</CustomField>